--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
     />
 
     <script
-      crossorigin="anonymous"
-      integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh"
-      src="https://lib.baomitu.com/jquery/3.4.1/jquery.min.js"
-    ></script>
-
-    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
       integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous"
@@ -66,8 +60,17 @@
           </div>
         </div>
 
+        <button
+          class="btn btn-warning"
+          style="margin-bottom: 20px; width: 150px"
+          type="button"
+          onclick="fillUrl"
+        >
+          生成链接
+        </button>
+
         <h3 class="title">链接</h3>
-        
+
         <div class="input-wrapper">
           <div class="input-group">
             <span class="input-group-addon">Web 链接</span>
@@ -118,12 +121,12 @@
     const fillUrl = () => {
       const webUrl = genWebUrl();
       webUrlInput.value = webUrl;
-      miniappUrlInput.value = genMiniappUrl(webUrl)
+      miniappUrlInput.value = genMiniappUrl(webUrl);
     };
 
-    categoryInput.addEventListener('change', fillUrl)
-    docTypeInput.addEventListener('change', fillUrl)
-    mediaInput.addEventListener('change', fillUrl)
+    categoryInput.addEventListener("change", fillUrl);
+    docTypeInput.addEventListener("change", fillUrl);
+    mediaInput.addEventListener("change", fillUrl);
 
     // 生成小程序链接
     function genMiniappUrl(url) {
